--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 /*
 
 Imported stylesheets. Remove the ones you do not want to use.
@@ -81,7 +81,7 @@ html {
 
 :root {
   --body-typeface: "Inter", sans-serif;
-  --heading-typeface: "Eczar", serif;
+  --heading-typeface: "Space Mono";
   --project-title-typeface: "Eczar", serif;
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
@@ -96,7 +96,7 @@ html {
   --h6-color: #5200ff;
   --primary-text-color: #222;
   --holding-page-title-color: #ebedf0;
-  --accent-color: #5200ff;
+  --accent-color: #3b3961;
   --overlay-color: #5200ff;
   --overlay-title-color: #ffffff;
   --overlay-description-color: #ffffff;
@@ -157,6 +157,7 @@ h1 {
   font-family: var(--heading-typeface);
   margin-bottom: 1rem;
   color: var(--h1-color);
+  font-weight: 700;
 }
 
 h2 {
