about page made

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@ html {
   --heading-typeface: "Space Mono";
   --project-title-typeface: "Space Mono";
   --background-color: #fdfdfd;
-  --background-color-about: #f5f5f5;
+  --background-color-about: #fdfdfd;
   --background-color-footer: #f5f5f5;
   --alt-background-color: #000000;
   --background-color-holding-page: rgba(82, 0, 255, 0.6);
@@ -163,7 +163,7 @@ h1 {
 h2 {
   font-size: 2.25rem;
   font-family: var(--heading-typeface);
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
   color: var(--h2-color);
 }
 
@@ -330,8 +330,19 @@ a:active {
   padding: 1rem;
   align-items: flex-start;
   justify-content: space-around;
-
-}
+  a:link {
+    color:white;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color:white;
+  }
+  
+  a:hover {
+    color: #fcdf5d;
+  }
+}ß
 
 .logo {
   width: 3rem;
@@ -376,6 +387,7 @@ a:active {
  ███ ███   ██████  ██   ██ ██   ██     ██      ██   ██  ██████  ███████ 
 
 */
+
 .logo-on-white {
   width: 3rem;
   fill: #222;
@@ -383,10 +395,6 @@ a:active {
   transition-timing-function: ease-in-out;
 }
 
-.logo-on-white:hover {
-  width: 3rem;
-  fill: #4c3cd8;
-}
 
 .work-wrapper {
   flex: 1;
@@ -595,12 +603,12 @@ a:active {
   width: 100%;
   padding: 1rem;
   /* TODO: Delete background-image and the three linear gradient colors to remove the gradient background on the project page. Be careful not to delete the closing } */
-  background-image: linear-gradient(
+ /* background-image: linear-gradient(
     -225deg,
     var(--linear-gradient-color-1) 0%,
     var(--linear-gradient-color-2) 50%,
     var(--linear-gradient-color-3) 100%
-  );
+  ); */
 }
 
 /* 
