--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@ html {
   --background-color-about: #fdfdfd;
   --background-color-footer: #f5f5f5;
   --alt-background-color: #000000;
-  --background-color-holding-page: rgba(82, 0, 255, 0.6);
+  --background-color-holding-page: #3b3961;
   --h1-color: #5200ff;
   --h2-color: #222;
   --h3-color: #222;
@@ -644,7 +644,7 @@ a:hover {
   /* TODO: Delete the following if you do not want a grainy gradient background on index.html. Be careful not to delete the closing } */
   background: linear-gradient(
       0deg,
-      rgba(0, 0, 0, 1),
+      #425678,
       var(--background-color-holding-page)
     ),
     url(/assets/temp/noise.svg);
