--- a/styles/style.css
+++ b/styles/style.css
@@ -759,11 +759,97 @@ a.custom-navigation:hover {
 ██      ██ ███████ ██████  ██ ██   ██      ██████   ██████  ███████ ██   ██ ██ ███████ ███████ 
 
 */
+@media (min-width: 390px) {
+  .hero {
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+
+  .stroke-shadow {
+    font-size: 2.5rem;
+    padding-bottom: 1%;
+    width: 80%;
+  }
+  .branding-navigation {
+    font-size: 0.8rem;
+  }
+
+  h1 {
+    font-size: 3.275rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  h3 {
+    font-size: 1.625rem;
+  }
+
+  p {
+    font-size: 0.8rem;
+    line-height: 1.3;
+    margin-bottom: 2rem;
+  }
+  .project-description {
+    font-size: 0.9rem;
+  }
+  .project-title {
+    font-size: 2rem;
+  }
+
+  .logo {
+    width: 2rem;
+  }
+  .logo:hover {
+    width: 2rem;
+  }
+}
 
 /* Medium devices (tablets, 768px and up) */
 
 @media (min-width: 768px) {
-  /* TODO: Add styles here for medium devices. */
+  .stroke-shadow {
+    font-size: 3.5rem;
+    padding-bottom: 1%;
+    width: 80%;
+  }
+  .branding-navigation {
+    font-size: 1.2rem;
+  }
+
+  h1 {
+    font-size: 3.275rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  h3 {
+    font-size: 1.625rem;
+  }
+
+  p {
+    font-size: 0.8rem;
+    line-height: 1.3;
+    margin-bottom: 2rem;
+  }
+  .project-description {
+    font-size: 0.9rem;
+  }
+  .project-title {
+    font-size: 2rem;
+  }
+
+  .logo {
+    width: 2rem;
+  }
+  .logo:hover {
+    width: 2rem;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -775,27 +861,11 @@ a.custom-navigation:hover {
     font-size: 2rem;
   }
 
-  h1 {
-    font-size: 4.275rem;
-  }
-
-  h2 {
-    font-size: 2.25rem;
-  }
-
-  h3 {
-    font-size: 1.625rem;
-  }
-
   .logo {
-    width: 2.5rem;
-
-    /* TODO: Adjust the width of the logo on large devices here. */
+    width: 3rem;
   }
   .logo:hover {
-    width: 2.5rem;
-
-    /* TODO: Adjust the width of the logo on large devices here. */
+    width: 3rem;
   }
 
   .hero-headline-wrapper {
