--- a/styles/style.css
+++ b/styles/style.css
@@ -810,6 +810,16 @@ a.custom-navigation:hover {
   .logo:hover {
     width: 2rem;
   }
+  .hero {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-image: url(../assets/images/caroline-zhang-stuffed-animals-portfolio-background.jpg);
+    background-size: auto;
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
