--- a/styles/style.css
+++ b/styles/style.css
@@ -811,6 +811,7 @@ a.custom-navigation:hover {
     width: 2rem;
   }
   .hero {
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     background-image: url(../assets/images/caroline-zhang-stuffed-animals-portfolio-background.jpg);
