--- a/styles/style.css
+++ b/styles/style.css
@@ -341,6 +341,7 @@ a.custom-navigation:hover {
 
 .hero {
   min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-image: url(../assets/images/caroline-zhang-stuffed-animals-portfolio-background.jpg);
