trying vh insttead

--- a/styles/style.css
+++ b/styles/style.css
@@ -340,7 +340,8 @@ a.custom-navigation:hover {
 */
 
 .hero {
-  height: 50rem;
+  height: 80vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-image: url(../assets/images/caroline-zhang-stuffed-animals-portfolio-background.jpg);
@@ -810,17 +811,6 @@ a.custom-navigation:hover {
   .logo:hover {
     width: 2rem;
   }
-
-  .hero {
-    height: 10rem;
-    display: flex;
-    flex-direction: column;
-    background-image: url(../assets/images/caroline-zhang-stuffed-animals-portfolio-background.jpg);
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-  }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -861,7 +851,8 @@ a.custom-navigation:hover {
     width: 2rem;
   }
   .hero {
-    height: 20rem;
+    height: 50vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-image: url(../assets/images/caroline-zhang-stuffed-animals-portfolio-background.jpg);
