--- a/styles/style.css
+++ b/styles/style.css
@@ -348,6 +348,7 @@ a.custom-navigation:hover {
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .branding-navigation {
