--- a/styles/style.css
+++ b/styles/style.css
@@ -338,6 +338,13 @@ a.custom-navigation:hover {
 ██   ██ ███████ ██   ██  ██████  
                                  
 */
+html {
+  height: 100%;
+  min-height: 100%;
+}
+body {
+  min-height: 100%;
+}
 
 .hero {
   height: 80vh;
