--- a/styles/style.css
+++ b/styles/style.css
@@ -348,7 +348,7 @@ body {
 
 .hero {
   height: 80vh;
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   background-image: url(../assets/images/caroline-zhang-stuffed-animals-portfolio-background.jpg);
