--- a/styles/style.css
+++ b/styles/style.css
@@ -381,9 +381,9 @@ body {
   display: flex;
   padding: 1rem;
   align-items: center;
-  justify-content: space-around;
-  margin-left: -15%;
-  margin-right: -15%;
+  justify-content: space-between;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .hero-headline-wrapper {
