--- a/styles/style.css
+++ b/styles/style.css
@@ -87,16 +87,16 @@ html {
   --background-color-about: #fdfdfd;
   --background-color-footer: #f5f5f5;
   --alt-background-color: #000000;
-  --background-color-holding-page: #3b3961;
+  --background-color-holding-page: #fdfdfd;
   --h1-color: #5200ff;
   --h2-color: #222;
   --h3-color: #222;
   --h4-color: #5200ff;
   --h5-color: #5200ff;
-  --h6-color: #5200ff;
+  --h6-color: #222;
   --primary-text-color: #222;
   --holding-page-title-color: #ebedf0;
-  --accent-color: #3b3961;
+  --accent-color: #ffffff;
   --overlay-color: #03677b;
   --overlay-title-color: #ffffff;
   --overlay-description-color: #ffffff;
@@ -113,7 +113,7 @@ html {
   --linear-gradient-color-1: #ff057c;
   --linear-gradient-color-2: #8d0b93;
   --linear-gradient-color-3: #321575;
-  --stroke-shadow-color: #3b3961;
+  --stroke-shadow-color: #000000;
 }
 
 body {
@@ -188,8 +188,10 @@ h5 {
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-family: var(--heading-typeface);
   margin-bottom: 1rem;
+  font-style: italic;
   color: var(--h6-color);
 }
 
@@ -222,7 +224,6 @@ em {
   font-size: 3rem;
   font-family: var(--project-title-typeface);
   color: var(--project-title-color);
-  margin-bottom: 2rem;
 }
 
 .overlay-title {
@@ -302,10 +303,10 @@ a.error-navigation:hover {
 }
 
 a.custom-navigation {
-  color: rgb(255, 255, 255);
+  color: white;
 }
 a.custom-navigation:visited {
-  color: rgb(255, 255, 255);
+  color: white;
 }
 a.custom-navigation:hover {
   color: #fadf64;
@@ -358,15 +359,56 @@ body {
 }
 
 .hero {
-  height: 90vh;
-  max-width: 100%;
   display: flex;
   flex-direction: column;
-  background-image: url(../assets/images/caroline-zhang-stuffed-animals-portfolio-background.jpg);
   background-position: center center;
-
   background-repeat: no-repeat;
   background-size: cover;
+  background-image: url(../assets/images/alleyway.png);
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+.hero-header {
+  z-index: 21;
+}
+.container {
+  position: absolute;
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Each SVG wrapper for physics shapes */
+.svg-box {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+}
+
+/* SVG inside each physics shape */
+.svg-box svg {
+  width: 100%;
+  height: 100%;
+}
+
+.illustration-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../assets/images/Untitled_Artwork_2.png) center center
+    no-repeat;
+  background-size: cover;
+  pointer-events: none; /* don't block mouse interactions */
+  z-index: 20; /* above the physics shapes */
+  mix-blend-mode: normal; /* optional: blend with shapes behind */
 }
 
 .branding-navigation {
@@ -376,6 +418,7 @@ body {
   margin-bottom: -1%;
   align-items: center;
   justify-content: left;
+  z-index: 20;
 }
 .branding-home-navigation {
   display: flex;
@@ -384,6 +427,7 @@ body {
   justify-content: space-between;
   margin-left: 5%;
   margin-right: 5%;
+  font-size: 1.2rem;
 }
 
 .hero-headline-wrapper {
@@ -392,12 +436,17 @@ body {
   flex: 1;
   align-items: flex-start;
   justify-content: flex-end;
-  padding: 2rem 4rem;
+  padding: 1rem 2rem;
   text-align: left;
+  z-index: 21;
 }
 
 .hero-icon {
   font-size: 4rem;
+}
+
+.stroke-shadow {
+  color: black;
 }
 
 .hero-footer {
@@ -447,6 +496,17 @@ body {
 
 .work-wrapper {
   flex: 1;
+  background: linear-gradient(
+      180deg,
+      rgb(17, 16, 16),
+      var(--background-color-holding-page)
+    ),
+    url(/assets/temp/noise.svg);
+  padding: 4rem 2rem 0rem;
+}
+.home-test {
+  background-color: rgb(17, 16, 16);
+  padding: 5%;
 }
 
 /* Padding around work grid and project page */
@@ -552,10 +612,10 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 3rem;
-  min-height: 80vh;
+  min-height: 65vh;
   background: var(--background-color-footer);
   padding: 1rem;
-  margin-top: 10rem;
+  margin-top: 3rem;
 }
 
 .footer-item-1 {
@@ -601,7 +661,7 @@ body {
 /* Sidebar */
 .project-aside {
   width: 100%;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   display: flex;
   flex-direction: column;
   color: var(--project-sidebar-text-color);
@@ -614,10 +674,12 @@ body {
   flex: 1;
   align-items: flex-end;
   justify-content: space-between;
+  margin-left: 1.5rem;
+  padding: 0.5rem 0rem;
 }
 
 .arrow {
-  padding: 0;
+  margin-bottom: 1.5vh;
 }
 
 .caption {
@@ -637,6 +699,23 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.project-image-wide {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0rem 1.5rem 2rem;
+}
+.project-image-mult {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0rem 1.5rem 2rem;
+  gap: 2%;
 }
 
 .video-game-image {
@@ -676,7 +755,7 @@ body {
 
 .project-details {
   width: 100%;
-  padding: 1rem;
+  padding: 1rem, 1rem, 0rem;
 }
 
 /* 
@@ -885,7 +964,7 @@ body {
   }
 
   .hero-headline-wrapper {
-    padding: 4rem 8rem;
+    padding: 1rem 4rem;
   }
 
   .grid {
@@ -972,8 +1051,7 @@ body {
   .project-aside {
     width: 35%;
     height: 65vh;
-    position: -webkit-sticky;
-    position: sticky;
+
     top: 5vh;
     padding-right: 2rem;
   }
