--- a/styles/style.css
+++ b/styles/style.css
@@ -364,7 +364,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(../assets/images/alleyway.png);
+  background-image: url(../assets/images/alleyway.jpg);
   position: relative;
   width: 100%;
   height: 100vh;
