--- a/styles/style.css
+++ b/styles/style.css
@@ -415,9 +415,10 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../assets/images/Untitled_Artwork_2.png) center center
-    no-repeat;
-  background-size: cover;
+  background: url(../assets/images/caroline-zhang-animation-gif-design-goober.png)
+    center center no-repeat;
+  background-size: contain;
+  background-position: center bottom;
   pointer-events: none; /* don't block mouse interactions */
   z-index: 20; /* above the physics shapes */
   mix-blend-mode: normal; /* optional: blend with shapes behind */
