--- a/styles/style.css
+++ b/styles/style.css
@@ -188,15 +188,15 @@ h5 {
 }
 
 h6 {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-family: var(--heading-typeface);
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   font-style: italic;
   color: var(--h6-color);
 }
 
 p {
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.3;
   margin-bottom: 2rem;
 }
@@ -335,7 +335,7 @@ a.custom-navigation:hover {
 }
 
 .project-description {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   line-height: 1.2;
   margin-bottom: 1rem;
   width: 80%;
@@ -678,7 +678,10 @@ body {
 }
 
 .project-aside-temp {
-  width: 100%;
+  width: 35%;
+  height: 65vh;
+  top: 5vh;
+  padding-right: 2rem;
   padding: 0.5rem 3rem;
   display: flex;
   flex-direction: column;
@@ -704,6 +707,7 @@ body {
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   font-style: italic;
+  width: 95%;
 }
 
 .project-image-container {
@@ -966,7 +970,7 @@ body {
   }
 
   .project-description {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
   .project-title {
     font-size: 2rem;
@@ -1074,11 +1078,18 @@ body {
     top: 5vh;
     padding-right: 2rem;
   }
-  .project-aside-temp {
+
+  .project-aside-temp-bottom {
+    display: flex;
     width: 35%;
     height: 65vh;
     top: 5vh;
     padding-right: 2rem;
+    padding: 0.5rem 3rem;
+
+    color: var(--project-sidebar-text-color);
+    background: var(--project-sidebar-background-color);
+    align-items: flex-end;
   }
 
   /* Main Project Image Area on Large Devices */
