--- a/styles/style.css
+++ b/styles/style.css
@@ -336,9 +336,9 @@ a.custom-navigation:hover {
 
 .project-description {
   font-size: 1.3rem;
-  line-height: 1.2;
+  line-height: 1.3;
   margin-bottom: 1rem;
-  width: 80%;
+  width: 95%;
 }
 
 /* Hero 
@@ -507,11 +507,16 @@ body {
   /* TODO: Adjust the width of the logo on large devices here. */
 }
 
+.header {
+  padding: 3rem 3rem 0rem 3rem;
+  width: 70%;
+}
+
 .work-wrapper {
   flex: 1;
   background: linear-gradient(
       180deg,
-      rgb(17, 16, 16),
+      #111010,
       var(--background-color-holding-page)
     ),
     url(/assets/temp/noise.svg);
@@ -704,10 +709,13 @@ body {
 }
 
 .caption {
+  align-self: center;
   margin-top: 1rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   font-style: italic;
-  width: 95%;
+  font-size: 1.2rem;
+  width: 100%;
+  line-height: 1.3;
 }
 
 .project-image-container {
@@ -1089,7 +1097,7 @@ body {
 
     color: var(--project-sidebar-text-color);
     background: var(--project-sidebar-background-color);
-    align-items: flex-end;
+    align-items: center;
   }
 
   /* Main Project Image Area on Large Devices */
